--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
                     <h3 class="section__about_story_cards_card_title">WE
                         PLAN</h3>
                     <div class="section__about_story_cards_card_img">
-                        <img src="img/img/Bitmap.png" alt="">
+                        <img class="card__image" src="img/img/Bitmap.png" alt="">
                     </div> 
                 </div>
                 <div class="section__about_story_cards_card">
                     <h3 class="section__about_story_cards_card_title">WE
                         MANAGE</h3>
                     <div class="section__about_story_cards_card_img">
-                        <img src="img/img/Bitmap (1).png" alt="">
+                        <img class="card__image" src="img/img/Bitmap (1).png" alt="">
                     </div>
                 </div>
                 <div class="section__about_story_cards_card">
                     <h3 class="section__about_story_cards_card_title">WE
                         BUILD</h3>
                     <div class="section__about_story_cards_card_img">
-                        <img src="img/img/Bitmap (2).png" alt="">
+                        <img class="card__image" src="img/img/Bitmap (2).png" alt="">
                     </div>
                 </div>
             </div>
@@ -152,7 +152,7 @@
             <h2 class="newsletter__title">Newsletter Signup</h2>
             <div class="newsletter__title_email">
                 <input class="newsletter__title_email_input" type="email" placeholder="test@youremail.com">
-                <button class="section__btn">SIGN UP</button>
+                <button class="section__btn sign_up">SIGN UP</button>
             </div>
         </div>
         
